[김정식] 리싸이클러뷰 작업

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TestProject">
-        <activity android:name=".MainActivity">
+        <activity android:name=".viewtest.textinputlayout.TextInputLayoutActivity"></activity>
+        <activity android:name=".viewtest.ViewTestActivity" />
+        <activity android:name=".notification.NotificationActivity" />
+        <activity android:name=".main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
