--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.js.testproject">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TestProject">
-        <activity android:name=".viewtest.textinputlayout.TextInputLayoutActivity"></activity>
+        <activity android:name=".permission.PermissionActivity"></activity>
+        <activity android:name=".viewtest.textinputlayout.TextInputLayoutActivity" />
         <activity android:name=".viewtest.ViewTestActivity" />
         <activity android:name=".notification.NotificationActivity" />
         <activity android:name=".main.MainActivity">
