--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,9 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    // Log 라이브러리
+    implementation 'com.orhanobut:logger:2.2.0'
+
 }
