--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.js.testproject">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TestProject">
-        <activity android:name=".permission.PermissionActivity"></activity>
+        <activity android:name=".stack.StackActivity"></activity>
+        <activity android:name=".permission.PermissionActivity" />
         <activity android:name=".viewtest.textinputlayout.TextInputLayoutActivity" />
         <activity android:name=".viewtest.ViewTestActivity" />
         <activity android:name=".notification.NotificationActivity" />
