--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,29 +2,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.js.testproject">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-    <application
-        android:name=".base.application.BaseApplication"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.TestProject">
-        <activity android:name=".stack.standard.Standard1Activity"></activity>
-        <activity android:name=".stack.StackActivity" />
-        <activity android:name=".permission.PermissionActivity" />
-        <activity android:name=".viewtest.textinputlayout.TextInputLayoutActivity" />
-        <activity android:name=".viewtest.ViewTestActivity" />
-        <activity android:name=".notification.NotificationActivity" />
-        <activity android:name=".main.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+  <application
+      android:name=".base.application.BaseApplication"
+      android:allowBackup="true"
+      android:icon="@mipmap/ic_launcher"
+      android:label="@string/app_name"
+      android:roundIcon="@mipmap/ic_launcher_round"
+      android:supportsRtl="true"
+      android:theme="@style/Theme.TestProject">
+    <activity android:name=".file.FileTestActivity"></activity>
+    <activity android:name=".stack.standard.Standard1Activity" />
+    <activity android:name=".stack.StackActivity" />
+    <activity android:name=".permission.PermissionActivity" />
+    <activity android:name=".viewtest.textinputlayout.TextInputLayoutActivity" />
+    <activity android:name=".viewtest.ViewTestActivity" />
+    <activity android:name=".notification.NotificationActivity" />
+    <activity android:name=".main.MainActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+  </application>
 
 </manifest>
