[김정식] 1. 카카오톡 올리면서 브랜치 병합 테스트

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/Theme.TestProject">
-    <activity android:name=".util.calendar.CalendarActivity"></activity>
+    <activity android:name=".kakao.KakaoActivity"></activity>
+    <activity android:name=".result.ResultActivity" />
+    <activity android:name=".util.calendar.CalendarActivity" />
     <activity android:name=".viewtest.etc.EtcActivity" />
     <activity android:name=".fastcampus.rotto.LottoActivity" />
     <activity android:name=".util.random.RandomActivity" />
