--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/Theme.TestProject">
-    <activity android:name=".viewtest.textview.TextViewActivity"></activity>
+    <activity android:name=".test.string.StringActivity"></activity>
+    <activity android:name=".test.TestActivity" />
+    <activity android:name=".viewtest.textview.TextViewActivity" />
     <activity android:name=".kakao.KakaoActivity" />
     <activity android:name=".result.ResultActivity" />
     <activity android:name=".util.calendar.CalendarActivity" />
