--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,8 @@ dependencies {
     // Log 라이브러리
     implementation 'com.orhanobut:logger:2.2.0'
 
+    // Coroutine
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
+
 }
