--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,10 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/Theme.TestProject">
-    <activity android:name=".coroutine.CoroutineActivity"></activity>
-    <activity android:name=".test.string.StringActivity"></activity>
+    <activity android:name=".intent.intenttrans.IntentTransActivity"></activity>
+    <activity android:name=".intent.IntentActivity" />
+    <activity android:name=".coroutine.CoroutineActivity" />
+    <activity android:name=".test.string.StringActivity" />
     <activity android:name=".test.TestActivity" />
     <activity android:name=".viewtest.textview.TextViewActivity" />
     <activity android:name=".kakao.KakaoActivity" />
