--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/Theme.TestProject">
-    <activity android:name=".intent.intenttrans.IntentTransActivity"></activity>
+    <activity android:name=".viewtest.customview.CustomViewActivity"></activity>
+    <activity android:name=".intent.intenttrans.IntentTransActivity" />
     <activity android:name=".intent.IntentActivity" />
     <activity android:name=".coroutine.CoroutineActivity" />
     <activity android:name=".test.string.StringActivity" />
