--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,5 +75,8 @@ dependencies {
     // Gson
     implementation "com.google.code.gson:gson:2.8.8"
 
+    // WorkManager
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
+
 
 }
