--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,7 @@ dependencies {
     implementation "com.google.code.gson:gson:2.8.8"
 
     // WorkManager
-    implementation "androidx.work:work-runtime-ktx:2.7.1"
+//    implementation "androidx.work:work-runtime-ktx:2.7.1"
 
 
 }
