--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,11 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/Theme.TestProject">
-    <activity android:name=".pretendcall.PretendCallActivity"></activity>
+    <activity android:name=".viewtest.addview.AddViewActivity"></activity>
+    <activity
+        android:name=".viewtest.keyboard.KeyboardActivity"
+        android:windowSoftInputMode="adjustResize" />
+    <activity android:name=".pretendcall.PretendCallActivity" />
     <activity android:name=".firebase.FirebaseActivity" />
     <activity android:name=".test.biometric.BiometricActivity" />
     <activity android:name=".viewtest.customview.CustomViewActivity" />
@@ -22,7 +26,7 @@
     <activity android:name=".test.string.StringActivity" />
     <activity
         android:name=".test.TestActivity"
-        android:windowSoftInputMode="adjustResize"></activity>
+        android:windowSoftInputMode="adjustResize" />
     <activity android:name=".viewtest.textview.TextViewActivity" />
     <activity android:name=".kakao.KakaoActivity" />
     <activity android:name=".result.ResultActivity" />
