--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.js.testproject">
 
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.CALL_PHONE" />
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.CAMERA" />
+  <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
 
   <application
       android:name=".base.application.BaseApplication"
@@ -12,8 +16,13 @@
       android:label="@string/app_name"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
+      android:hardwareAccelerated="true"
       android:theme="@style/Theme.TestProject">
-    <activity android:name=".composetest.ComposeTestActivity"></activity>
+    <activity android:name="com.journeyapps.barcodescanner.CaptureActivity"
+        android:screenOrientation="fullSensor"
+        tools:replace="screenOrientation"/>
+    <activity android:name=".gurucoin.GuruCoinActivity" />
+    <activity android:name=".composetest.ComposeTestActivity" />
     <activity android:name=".headerfooter.HeaderFooterActivity" />
     <activity android:name=".viewtest.motionlayout.MotionLayoutActivity" />
     <activity android:name=".viewtest.numberpicker.NumberPickerActivity" />
@@ -73,6 +82,7 @@
     <meta-data
         android:name="com.google.firebase.messaging.default_notification_channel_id"
         android:value="aaaa" />
+
   </application>
 
 </manifest>
