--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,4 +108,9 @@ dependencies {
     implementation('com.journeyapps:zxing-android-embedded:4.3.0') { transitive = false }
     implementation 'com.google.zxing:core:3.3.0'
 
+    // Stetho
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.6.0'
+    implementation 'com.facebook.stetho:stetho-urlconnection:1.6.0'
+    implementation 'com.facebook.stetho:stetho-js-rhino:1.6.0'
+
 }
